- changed vertical slider height to make them non-overlapping (gscf issue #425)

--- a/web-app/css/table-editor.css
+++ b/web-app/css/table-editor.css
@@ -121,6 +121,6 @@
 	position: absolute;
 	margin-left: -20px;
 	margin-top: 15px;
-	height: 150px;
+	height: 60px;
 }
 /* END :: table editor */
